# envguard

./: .gitignore  README.md  pyproject.toml
envguard/: __init__.py  __main__.py  cli.py  crypto.py  profiles.py  schema.py
envguard.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_envguard.py
